--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
    <h1>hello world👋</h1> 
    <!--Burger menu alongside H1-->
    <h2>Frontend Developer.</h2>
-   <p>I am an Avid Coder based in South Africa
-    <br>
-    I love to create solid and scalable front end prodcuts with great user exprerice.
+<!--  -->
+    <p>I am an enthusiastic coder who enjoys creating clean &amp; simple, easy to use, and engaging user interfaces.</p>
+    <p>I love developing and designing a variety of  solid and scalable front end prodcuts with great user exprerice.
    </p>
-   <p>Content intro here</p>
-   <p>More content intro on the left of the intro content above</p>
+   <img src=""/>
+   <img src=""/>
+   <img src=""/>
+<footer>
+    <p>lets connect </p>
+    <hr>
+    <p>social links</p>
+</footer>
 </body>
 </html>
