Added boxes and profile picture
Added dotted line

--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
     <title>Ticha Maenga Portfolio 2025</title>
 </head>
 <body>
+   
    <h1>hello world👋</h1> 
    <!--Burger menu alongside H1-->
    <h2>Frontend Developer.</h2>
 <!--  -->
-    <p>I am an enthusiastic coder who enjoys creating clean &amp; simple, easy to use, and engaging user interfaces.</p>
-    <p>I love developing and designing a variety of  solid and scalable front end prodcuts with great user exprerice.
+<div class="container">
+    
+    <div class="box box1">
+        <div class="dotted-lines">
+            <div class="dotted-right"></div>
+            <div class="dotted-bottom"></div>
+            </div>
+        <p>I am an enthusiastic coder who enjoys creating clean &amp; simple, easy to use, and engaging user interfaces.</p>
+    </div>
+    <div class="box box2"><p>I love developing and designing a variety of  solid and scalable front end prodcuts with great user exprerice.
    </p>
+    </div>
+   
+    <img src="IMG_shecodes profile pic.jpg" alt="Profile Picture" class="profile-img">
+   
+</div>
    <img src=""/>
    <img src=""/>
    <img src=""/>
