Added images and styling to the grid

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ticha Maenga Portfolio 2025</title>
 </head>
 <body>
+
+    
    
    <h1>hello world👋</h1> 
    <!--Burger menu alongside H1-->
@@ -19,18 +21,30 @@
             <div class="dotted-right"></div>
             <div class="dotted-bottom"></div>
             </div>
-        <p>I am an enthusiastic coder who enjoys creating clean &amp; simple, easy to use, and engaging user interfaces.</p>
+        <p>I am an enthusiastic coder who enjoys creating clean &amp; simple, easy to use, and engaging user interfaces.
+        </p>
+        <hr>
+            <h2>Technologies</h2>
+        <p> Bootstrap,etc</p>
     </div>
-    <div class="box box2"><p>I love developing and designing a variety of  solid and scalable front end prodcuts with great user exprerice.
-   </p>
+    <div class="box box2"><p class="rightbox">I love developing and designing a variety of  s
+        olid and scalable front end prodcuts with great user exprerice.
+        <hr>
+        <h3>Tools</h3>
+   <p> vs code , etc</p>
     </div>
    
-    <img src="IMG_shecodes profile pic.jpg" alt="Profile Picture" class="profile-img">
+    <img src="IMG_shecodes profile pic.jpg" alt="profile-picture" class="profile-img"/>
    
+</div> 
+<h4>SEE MY PROJECTS</h4>
+<div class="grid">
+    <img src="img-dark theme.png" alt="project" class="project">
+   <img src="img-poem.png" alt="project" class="project">
+   <img src="img-portfolio.png" alt="project" class="project">
+   <img src="img-react weatherapp.png" alt="project" class="project">
 </div>
-   <img src=""/>
-   <img src=""/>
-   <img src=""/>
+
 <footer>
     <p>lets connect </p>
     <hr>
