Added and styled Change Theme button.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    
+    <button class="theme-button"> Change Theme</button>
    
    <h1>hello world👋</h1> 
    <!--Burger menu alongside H1-->
