Created index.js file and linked it to index.html file

--- a/index.html
+++ b/index.html
@@ -79,5 +79,7 @@
 <footer>
     <p>this project was bulid by Ticha Maenga</p>
 </footer>
+
+<script src="javascript/index.js"></script>
 </body>
 </html>
