rearranged css styling

--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
     <p>this project was bulid by Ticha Maenga</p>
 </footer>
 
-<script src="javascript/index.js"></script>
+<script src="../index.js"></script>
 </body>
 </html>
