--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
    <nav class="navbar">
     <div class="logo">
-   logo
+   TNM
     </div>
     <div class="menu">
      <ul>
@@ -28,10 +28,9 @@
 
     
    
-   <h1>HELLO👋</h1> 
+   <h1>TICHA MAENGA</h1> 
    <!--Burger menu alongside H1-->
-   <h2>TICHA MAENGA
-    <br>
+   <h2>
     Frontend Developer based in South africa.
 </h2>
 <!--  -->
