--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <p>social links</p>
 </section>
 <footer>
-    <p>this project was bulid by Ticha Maenga</p>
+    <p>this project was coded by Ticha Maenga</p>
 </footer>
 
 <script src="../index.js"></script>
