Edited index.js link to index.html filr

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h5> 
         More of my work plus expnation about myself 
     </h5>
-    <button> Resume </button>
+    <button> See My Resume here </button>
 
 
     <p>lets connect </p>
@@ -79,6 +79,6 @@
     <p>this project was coded by Ticha Maenga</p>
 </footer>
 
-<script src="../index.js"></script>
+<script src="javascript/index.js"></script>
 </body>
 </html>
