Updated dark theme functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Ticha Maenga Portfolio 2025</title>
 </head>
-<body>
+<body class="dark">
     
     <button class="theme-button"> Change Theme</button>
 
@@ -34,7 +34,7 @@
     Frontend Developer based in South africa.
 </h2>
 <!--  -->
-<div class="container">
+<div class="container" class="dark">
     
     <div class="box box1">
         <div class="dotted-lines">
